fixed application ligic and added tests
